# bore

./: .dockerignore  .env.example  .gitignore  .golangci.yml  ARCHITECTURE.md  BUILD.md  CHANGELOG.md  Cargo.toml  Dockerfile  README.md  REWRITE_TRACKER.md  SECURITY.md  biome.json  docker-compose.yml  go.mod  go.sum  go.work  package.json  tsconfig.base.json
.github/workflows/: ci.yml
apps/api/: Dockerfile  package.json
apps/api/src/: app.ts  config.ts  db.ts  index.ts  logger.ts  manage-db.ts  migrations.ts  rate-limit.ts  relay.ts  sessions.ts
apps/api/tests/: app.test.ts  integration.test.ts
apps/web/: Dockerfile  astro.config.mjs  package.json  playwright.config.ts  tsconfig.json
apps/web/e2e/: smoke.spec.ts
apps/web/src/components/: CreateSessionForm.vue  HealthSnapshot.vue  JoinSessionPanel.vue  OpsSummaryPanel.vue  ReceiveTransferPanel.vue  SendTransferPanel.vue
apps/web/src/composables/: useCreateSessionForm.ts  useJoinSession.ts  useOpsSummary.ts  useTransferEngine.ts
apps/web/src/layouts/: AppLayout.astro
apps/web/src/lib/: api.ts  forms.ts  routes.ts
apps/web/src/pages/: index.astro  ops.astro  (+1 more)
apps/web/tests/: api.test.ts  components.test.ts  composables.test.ts  routes.test.ts
client/: go.mod  go.sum
client/cmd/bore/: main.go
client/internal/code/: code.go  code_test.go
client/internal/engine/: engine.go  engine_test.go
client/internal/rendezvous/: rendezvous.go  rendezvous_test.go
client/internal/transport/: direct.go  relay.go  selector.go  transport.go  transport_test.go
cmd/bore/: main.go  main_test.go
cmd/bore-admin/: main.go
cmd/punchthrough/: main.go
cmd/relay/: main.go
crates/bore-cli/: Cargo.toml
crates/bore-cli/src/: main.rs
crates/bore-core/: Cargo.toml
crates/bore-core/src/: code.rs  codec.rs  crypto.rs  engine.rs  error.rs  lib.rs  protocol.rs  rendezvous.rs  session.rs  transfer.rs  transport.rs
db/migrations/: 0001_session_foundation.sql  0002_transfer_lifecycle.sql
deploy/: bore-relay.service
docs/: crypto-design.md  status-contract.md  threat-model.md
frontend/: pyproject.toml
frontend/src/app/: config.py  formatting.py  main.py  relay.py
frontend/src/app/routes/: pages.py  partials.py
frontend/src/app/templates/: 404.html  base.html  home.html  ops_relay.html
frontend/src/app/templates/partials/: relay_status.html
frontend/tests/: test_config.py  test_formatting.py  test_routes.py
infra/caddy/: Caddyfile
internal/client/code/: code.go  code_test.go  fuzz_test.go
internal/client/crypto/: crypto.go  crypto_test.go
internal/client/engine/: engine.go  engine_test.go  fuzz_test.go  resume.go  resume_test.go
internal/client/rendezvous/: rendezvous.go  rendezvous_test.go
internal/client/transport/: benchmark_test.go  candidate.go  candidate_test.go  direct.go  discovery.go  gathering.go  gathering_test.go  integration_test.go  metrics.go  metrics_test.go  quic.go  quic_test.go  relay.go  reliable.go  reliable_test.go  result.go  result_test.go  selector.go  signaling.go  signaling_test.go  transport.go  transport_test.go
internal/punchthrough/punch/: config.go  config_test.go  engine.go  engine_test.go  errors.go  types_test.go
internal/punchthrough/stun/: config.go  integration_test.go  types_test.go
internal/relay/metrics/: alerts.go  alerts_test.go  metrics.go  metrics_test.go
internal/relay/ratelimit/: ratelimit.go  ratelimit_test.go
internal/relay/room/: callback_test.go  registry.go  room.go  room_test.go
internal/relay/status/: status.go
internal/relay/transport/: metrics_test.go  relay.go  server.go  signal_test.go  transport_test.go
internal/relay/webui/: webui.go  webui_test.go
internal/roomid/: roomid.go  roomid_test.go
lib/punchthrough/: go.mod  go.sum
scripts/: workspace-task.mjs
services/bore-admin/: go.mod
services/relay/: go.mod
tui/: package.json  tsconfig.json
tui/src/: main.ts
tui/src/lib/: format.ts  status.ts  view-model.ts
tui/tests/: format.test.ts  view-model.test.ts
web/: astro.config.mjs  biome.json  index.html  package.json  tailwind.config.ts  tsconfig.json  vite.config.ts
web/src/: index.css  main.tsx
web/src/components/: RelayStatusPanel.vue
web/src/layouts/: BaseLayout.astro
web/src/lib/: format.ts  relay-status.ts  status.ts
web/src/pages/: 404.astro  index.astro
web/src/routes/: home.tsx  not-found.tsx  ops-relay.tsx  root.tsx  route-tree.ts
web/src/scripts/: relay-status.ts
web/src/styles/: base.css  global.css  tokens.css
web/src/types/: alpinejs.d.ts
web/tests/: format.test.ts  relay-status.test.ts  status.test.ts
(+23 files in other folders)
